--- a/sass/partials/_globals.scss
+++ b/sass/partials/_globals.scss
@@ -111,8 +111,8 @@ code, kbd, tt, var {
 	font: 0.9em Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 }
 abbr, acronym {
-	border-bottom: 1px dotted #666;
-	cursor: help;
+	border-bottom: none;
+	cursor: default;
 }
 sup,
 sub {
