--- a/editor-style.css
+++ b/editor-style.css
@@ -1,9 +1,9 @@
-/**
- * Editor styles (styleseet for the page and post edit boxes)
- *
- * @package Emphaino
- * @since Emphaino 1.0
- */
+/* line 86, sass/partials/_defines.scss */
+.js #dynamic-grid {
+  margin: -10px -10px 20px;
+  margin: -1rem -1rem 2rem;
+}
+
 /* =Reset
 -------------------------------------------------------------- */
 /* line 11, sass/partials/_reset.scss */
@@ -307,8 +307,8 @@ code, kbd, tt, var {
 
 /* line 113, sass/partials/_globals.scss */
 abbr, acronym {
-  border-bottom: 1px dotted #666;
-  cursor: help;
+  border-bottom: none;
+  cursor: default;
 }
 
 /* line 118, sass/partials/_globals.scss */
@@ -523,76 +523,76 @@ a:active {
   text-decoration: underline;
 }
 
-/* line 15, sass/editor-style.scss */
+/* line 8, sass/editor-style.scss */
 html {
   max-width: 740px;
   overflow-y: visible;
 }
 
-/* line 20, sass/editor-style.scss */
+/* line 13, sass/editor-style.scss */
 body {
   padding: 20px 40px;
   font-size: 14px;
 }
 
-/* line 25, sass/editor-style.scss */
+/* line 18, sass/editor-style.scss */
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 10px;
 }
 
-/* line 28, sass/editor-style.scss */
+/* line 21, sass/editor-style.scss */
 h1 {
   font-size: 24px;
   border-bottom: 1px solid #455646;
 }
 
-/* line 32, sass/editor-style.scss */
+/* line 25, sass/editor-style.scss */
 h2 {
   font-size: 22px;
 }
 
-/* line 35, sass/editor-style.scss */
+/* line 28, sass/editor-style.scss */
 h3 {
   font-size: 18px;
 }
 
-/* line 38, sass/editor-style.scss */
+/* line 31, sass/editor-style.scss */
 h4 {
   font: bold 14px "PT Sans", Verdana, Geneva, sans-serif;
   text-transform: uppercase;
 }
 
-/* line 42, sass/editor-style.scss */
+/* line 35, sass/editor-style.scss */
 h5 {
   font: bold 12px "PT Sans", Verdana, Geneva, sans-serif;
   text-transform: uppercase;
 }
 
-/* line 46, sass/editor-style.scss */
+/* line 39, sass/editor-style.scss */
 h6 {
   font: bold 12px "PT Sans", Verdana, Geneva, sans-serif;
 }
 
-/* line 49, sass/editor-style.scss */
+/* line 42, sass/editor-style.scss */
 .wp-caption {
   border: 0;
   background: transparent;
   max-width: 100%;
 }
 
-/* line 54, sass/editor-style.scss */
+/* line 47, sass/editor-style.scss */
 .wp-caption, .entry-attachment {
   margin-bottom: 1.5em;
   padding: 0;
   width: 100%;
 }
-/* line 58, sass/editor-style.scss */
+/* line 51, sass/editor-style.scss */
 .wp-caption img, .entry-attachment img {
   background: #eeeeee;
   width: 100%;
 }
 
-/* line 63, sass/editor-style.scss */
+/* line 56, sass/editor-style.scss */
 .wp-caption-text, .wp-caption-dd, .entry-attachment .entry-caption p {
   background: #eeeeee;
   padding: 2px 5px;
