--- a/print.css
+++ b/print.css
@@ -4,6 +4,12 @@
  * @package Emphaino
  * @since Emphaino 1.0
  */
+/* line 86, sass/partials/_defines.scss */
+.js #dynamic-grid {
+  margin: -10px -10px 20px;
+  margin: -1rem -1rem 2rem;
+}
+
 /* =Reset
 -------------------------------------------------------------- */
 /* line 11, sass/partials/_reset.scss */
