--- a/sass/partials/_menu.scss
+++ b/sass/partials/_menu.scss
@@ -119,6 +119,7 @@
         .left-block {
             vertical-align: bottom;
             padding-right: 6rem;
+            padding-top: 5rem;
             // z-index:-1;
             display: table-cell;
             width: 67%;
