--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,7 +29,7 @@ License URI: license.txt
 @import "partials/_canvas";
 @import "partials/_header";
 @import "partials/_menu";
-@import "partials/_responsive-nav";
+@import "partials/_content_home";
 @import "partials/_content";
 @import "partials/_comments-area";
 @import "partials/_widget-area";
