--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -308,7 +308,7 @@ article.tribe_events h3 {
     font-size: 1.6em;
 }
 
-.post-type-archive-news, .page-template-page-working-groups-php, .single-news, .tax-project-types, .tax-kind  {
+.post-type-archive-news, .page-template-page-working-groups-php, .single-news, .tax-project-types, .tax-kind, .single-projects  {
     .site-content {
         // background-color: pink;
         max-width: 76rem;
