--- a/pattern-primer.css
+++ b/pattern-primer.css
@@ -1352,9 +1352,10 @@ body {
 /* line 51, sass/partials/_canvas.scss */
 .site-footer {
   clear: both;
+  margin-top: 60px;
 }
 
-/* line 55, sass/partials/_canvas.scss */
+/* line 56, sass/partials/_canvas.scss */
 .back-to-top {
   display: none;
   position: fixed;
@@ -1369,11 +1370,11 @@ body {
   color: #fff;
   font-size: 1.5rem;
 }
-/* line 68, sass/partials/_canvas.scss */
+/* line 69, sass/partials/_canvas.scss */
 .back-to-top:hover {
   background-color: rgba(0, 0, 0, 0.6);
 }
-/* line 71, sass/partials/_canvas.scss */
+/* line 72, sass/partials/_canvas.scss */
 .back-to-top:before {
   font-weight: bold;
 }
@@ -1565,12 +1566,12 @@ body {
   box-shadow: rgba(51, 51, 51, 0.7) 2px 2px 4px;
   border: 1px solid #aaa;
 }
-/* line 51, sass/partials/_menu.scss */
-#top-block .site-navigation li.current-menu-item a, .single-projects #top-block .site-navigation li.item-projects a, .tax-working-groups #top-block .site-navigation li.item-wg a, .single-news #top-block .site-navigation li.item-news a, .events-single #top-block .site-navigation li.item-events a {
+/* line 54, sass/partials/_menu.scss */
+#top-block .site-navigation li.current-menu-item a, .single-projects #top-block .site-navigation li.item-projects a, .tax-project-types #top-block .site-navigation li.item-projects a, .tax-working-groups #top-block .site-navigation li.item-wg a, .single-news #top-block .site-navigation li.item-news a, .tax-kind #top-block .site-navigation li.item-news a, .events-single #top-block .site-navigation li.item-events a, .events-archive #top-block .site-navigation li.item-events a {
   background-color: white;
   color: #071e09;
 }
-/* line 56, sass/partials/_menu.scss */
+/* line 59, sass/partials/_menu.scss */
 #top-block .site-navigation li a {
   padding: 1em;
   display: block;
@@ -1584,22 +1585,22 @@ body {
   font-family: "PT Sans", Verdana, Geneva, sans-serif;
   border-bottom: 1px solid #ddd;
 }
-/* line 71, sass/partials/_menu.scss */
+/* line 74, sass/partials/_menu.scss */
 #top-block .site-navigation li a:hover {
   background-color: #e73122;
   background-color: #fff;
   text-decoration: none;
 }
-/* line 79, sass/partials/_menu.scss */
+/* line 82, sass/partials/_menu.scss */
 #top-block .site-navigation li a:active {
   color: #d82617;
 }
-/* line 83, sass/partials/_menu.scss */
+/* line 86, sass/partials/_menu.scss */
 #top-block .site-navigation .home-page-link {
   display: none;
 }
 @media (min-width: 15em) and (max-width: 61.25em) {
-  /* line 108, sass/partials/_menu.scss */
+  /* line 111, sass/partials/_menu.scss */
   #top-block .site-navigation a.nav-toggle {
     display: block;
     padding: 0rem 1rem 4rem;
@@ -1607,11 +1608,11 @@ body {
   }
 }
 @media (min-width: 61.3125em) {
-  /* line 116, sass/partials/_menu.scss */
+  /* line 119, sass/partials/_menu.scss */
   #top-block .rowhold {
     display: table-row;
   }
-  /* line 119, sass/partials/_menu.scss */
+  /* line 122, sass/partials/_menu.scss */
   #top-block .left-block {
     vertical-align: bottom;
     padding-right: 6rem;
@@ -1619,15 +1620,15 @@ body {
     display: table-cell;
     width: 67%;
   }
-  /* line 126, sass/partials/_menu.scss */
+  /* line 129, sass/partials/_menu.scss */
   .home #top-block .left-block {
     padding-top: 6rem;
   }
-  /* line 129, sass/partials/_menu.scss */
+  /* line 132, sass/partials/_menu.scss */
   #top-block .left-block .page-title {
     padding: 0rem;
   }
-  /* line 134, sass/partials/_menu.scss */
+  /* line 137, sass/partials/_menu.scss */
   #top-block:before {
     background-color: #B4D3DC;
     content: "";
@@ -1637,27 +1638,27 @@ body {
     bottom: 0;
     right: 100%;
   }
-  /* line 143, sass/partials/_menu.scss */
+  /* line 146, sass/partials/_menu.scss */
   #top-block .site-navigation {
     width: 33%;
     display: table-cell;
     background: #b4d3dc url(images/csa.jpg) no-repeat left bottom;
   }
-  /* line 147, sass/partials/_menu.scss */
+  /* line 150, sass/partials/_menu.scss */
   #top-block .site-navigation a.nav-toggle {
     display: none;
   }
-  /* line 150, sass/partials/_menu.scss */
+  /* line 153, sass/partials/_menu.scss */
   #top-block .site-navigation #menu-top-navigation {
     display: block;
   }
 }
 
-/* line 158, sass/partials/_menu.scss */
+/* line 161, sass/partials/_menu.scss */
 .main-small-navigation .home-page-link {
   float: none;
 }
-/* line 161, sass/partials/_menu.scss */
+/* line 164, sass/partials/_menu.scss */
 .main-small-navigation h1.icon-menu {
   background-color: purple;
   display: inline;
@@ -1667,24 +1668,24 @@ body {
   font-size: 16px;
   font-size: 1.6rem;
 }
-/* line 169, sass/partials/_menu.scss */
+/* line 172, sass/partials/_menu.scss */
 .main-small-navigation h1.icon-menu span {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
   /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
 }
-/* line 176, sass/partials/_menu.scss */
+/* line 179, sass/partials/_menu.scss */
 .main-small-navigation ul {
   margin: 0 10px;
   margin: 0 1rem;
 }
-/* line 179, sass/partials/_menu.scss */
+/* line 182, sass/partials/_menu.scss */
 .main-small-navigation ul li:before {
   position: static;
 }
 
-/* line 185, sass/partials/_menu.scss */
+/* line 188, sass/partials/_menu.scss */
 .menu li.current-menu-item a {
   background-color: #071e09;
   color: white;
@@ -1692,7 +1693,7 @@ body {
 
 /*! responsive-nav.js 1.0.25 by @viljamis */
 @media (min-width: 15em) and (max-width: 61.25em) {
-  /* line 192, sass/partials/_menu.scss */
+  /* line 195, sass/partials/_menu.scss */
   .nav-collapse ul {
     margin: 0;
     padding: 0;
@@ -1701,18 +1702,18 @@ body {
     list-style: none;
   }
 
-  /* line 201, sass/partials/_menu.scss */
+  /* line 204, sass/partials/_menu.scss */
   .nav-collapse li {
     width: 100%;
     display: block;
   }
 
-  /* line 205, sass/partials/_menu.scss */
+  /* line 208, sass/partials/_menu.scss */
   .nav-collapse li:last-child {
     padding-bottom: 1rem;
   }
 
-  /* line 208, sass/partials/_menu.scss */
+  /* line 211, sass/partials/_menu.scss */
   .js .nav-collapse {
     clip: rect(0 0 0 0);
     max-height: 0;
@@ -1722,17 +1723,17 @@ body {
     zoom: 1;
   }
 
-  /* line 216, sass/partials/_menu.scss */
+  /* line 219, sass/partials/_menu.scss */
   .nav-collapse.opened {
     max-height: 9999px;
   }
 
-  /* line 219, sass/partials/_menu.scss */
+  /* line 222, sass/partials/_menu.scss */
   .nav-collapse.disable-pointer-events {
     pointer-events: none !important;
   }
 
-  /* line 222, sass/partials/_menu.scss */
+  /* line 225, sass/partials/_menu.scss */
   .nav-toggle {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-touch-callout: none;
@@ -1744,7 +1745,7 @@ body {
     text-indent: -9000em;
   }
 
-  /* line 232, sass/partials/_menu.scss */
+  /* line 235, sass/partials/_menu.scss */
   .nav-toggle {
     display: block;
     position: relative;
@@ -1757,7 +1758,7 @@ body {
   }
 }
 @media (min-width: 61.3125em) {
-  /* line 253, sass/partials/_menu.scss */
+  /* line 256, sass/partials/_menu.scss */
   .nav-toggle {
     display: none;
   }
@@ -2160,7 +2161,7 @@ article.tribe_events h3 {
 }
 
 /* line 312, sass/partials/_content.scss */
-.post-type-archive-news .site-content, .page-template-page-working-groups-php .site-content, .single-news .site-content, .tax-project-types .site-content, .tax-kind .site-content {
+.post-type-archive-news .site-content, .page-template-page-working-groups-php .site-content, .single-news .site-content, .tax-project-types .site-content, .tax-kind .site-content, .single-projects .site-content {
   max-width: 76rem;
 }
 
