--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -346,7 +346,10 @@ article.tribe_events h3 {
         background-color: white;
     }
 }
-
+.events-archive .page-header h1 {
+        font-size: 2.5em;
+      
+    }
 .page {
     // all working groups, about
     .hentry {
