--- a/sass/partials/_menu.scss
+++ b/sass/partials/_menu.scss
@@ -128,6 +128,7 @@
             display: table-row;
             width:100%;
         }
+
         .left-block {
             vertical-align: bottom;
             padding-right: 6rem;
@@ -141,6 +142,10 @@
             .page-title {
                 padding: 0rem;
                 // max-width: 13em;
+            }
+            .events-archive & header h1{
+                max-width: 450px;
+                
             }
         }
         &:before {
