--- a/tribe-events/tribe-events.css
+++ b/tribe-events/tribe-events.css
@@ -345,7 +345,7 @@ div.tribe-events-notices > ul, div.tribe-events-notices > ul > li {
 
 /* General Template Headers */
 h2.tribe-events-page-title {
-	background-color: pink;
+	
 	display: none;
 	font-size: 24px;
 	font-weight: normal;
@@ -532,7 +532,7 @@ select.tribe-events-dropdown {
 
 .tribe-events-list .vevent.hentry {
 	border-bottom: 1px solid #ddd;
-	padding: 2.25em 0;
+	padding: 2.25em;
 	margin: 0;
 }
 
@@ -670,7 +670,7 @@ select.tribe-events-dropdown {
 	font-weight: bold;
 	font-size: 14px;
 	margin: 2.5em 0 0;
-	background-color: #EEE;
+	background-color: transparent;
 	padding: 6px 10px;
 }
 
@@ -1652,9 +1652,16 @@ input[name*="tribe-bar-"]:-moz-placeholder {
 	clear: none;
 	margin: 0;
 }
-.tribe-bar-disabled {
-	float: right;
+.tribe-bar-is-disabled .page-header {
+/*	width:auto;
+	overflow:auto;*/
 	position: relative;
+}
+.tribe-bar-disabled {
+	/*float: right;*/
+	position: absolute;
+	right:0;
+	bottom:0;
 	z-index: 101;
 }
 
@@ -1662,6 +1669,7 @@ input[name*="tribe-bar-"]:-moz-placeholder {
 	width: auto;
 	min-width: 0;
 	float: none;
+	margin-bottom:0;
 }
 .tribe-bar-disabled #tribe-bar-form {
 	width: auto;
@@ -1701,9 +1709,9 @@ input[name*="tribe-bar-"]:-moz-placeholder {
 }
 
 .tribe-bar-disabled #tribe-bar-form #tribe-bar-views {
-	width: 50%;
+	width: 100%;
 	float: left;
-	left: 50%;
+	left: 0;
 	right: auto;
 	padding: 0;
 }
